# Generative-AI

./: 02_Broch.ipynb  data_science_app.py  data_science_utlis.py
AD_Generation/: Brochure.ipynb  Readme.md
CelebA-WGAN-Exploring-Advanced-Image-Generation-with-WGAN-and-CelebA-Dataset-main/: 01_Model_Creation.ipynb  02_Data_Extraction.ipynb  README.md
CelebA-WGAN-Exploring-Advanced-Image-Generation-with-WGAN-and-CelebA-Dataset-main/model/critic.pt/: fingerprint.pb  keras_metadata.pb  saved_model.pb
CelebA-WGAN-Exploring-Advanced-Image-Generation-with-WGAN-and-CelebA-Dataset-main/model/critic.pt/variables/: variables.index
CelebA-WGAN-Exploring-Advanced-Image-Generation-with-WGAN-and-CelebA-Dataset-main/model/generator.pt/: fingerprint.pb  keras_metadata.pb  saved_model.pb
CelebA-WGAN-Exploring-Advanced-Image-Generation-with-WGAN-and-CelebA-Dataset-main/model/generator.pt/variables/: variables.index
Debater/: README.md  pyproject.toml
Debater/knowledge/: user_preference.txt
Debater/output/: decide.md  oppose.md  propose.md
Debater/src/project/: crew.py  main.py
Debater/src/project/config/: agents.yaml  tasks.yaml
Generative AI Deep Dive Using Hugging Face From Pipelines to Quantization/: Notebook.ipynb  Readme.md  notebook.ipynb
Generative-AI-with-Normalizing-Flows-make_moons-Dataset-Example-main/: Normalising_Flow.ipynb  README.md
chatbot/: chatbot_app.py  chatbot_utils.py
