[project]
name = "project"
version = "0.1.0"
description = "Project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
project = "project.main:run"
run_crew = "project.main:run"
train = "project.main:train"
replay = "project.main:replay"
test = "project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
